--- a/catppuccin/theme.conf
+++ b/catppuccin/theme.conf
@@ -3,16 +3,16 @@
 ### GENERAL
 
 # path to the wallpaper. you can drop files in backgrounds/ to use a relative path, or you can just use an absolute path.
-Background="backgrounds/flatppuccin_macchiato.png"
+Background="backgrounds/NixOS.png"
 
 # the font to use throughout the theme. use the name of the font family.
-Font="Liga SFMono Nerd Font"
+Font="SpaceMono Nerd Font"
 
 # the distance that stuff should be from the screen edge.
 Padding="50"
 
 # specify how round corners should be, or set to 0 to disable rounded corners.
-CornerRadius="5"
+CornerRadius="25"
 
 # the font size used for everything excluding the date and time.
 GeneralFontSize="9"
@@ -26,7 +26,7 @@ LoginScale="0.175"
 UserPictureBorderWidth="5"
 
 # the color of the outline around the user avatar.
-UserPictureBorderColor="#c0caf5"
+UserPictureBorderColor="#BA887F"
 
 # the color of the default, blank avatar. note that this isonly visible when you don't have a custom picture set.
 UserPictureColor="#414868"
