--- a/catppuccin/theme.conf
+++ b/catppuccin/theme.conf
@@ -3,7 +3,7 @@
 ### GENERAL
 
 # path to the wallpaper. you can drop files in backgrounds/ to use a relative path, or you can just use an absolute path.
-Background="backgrounds/NixOS.png"
+Background="backgrounds/0029.png"
 
 # the font to use throughout the theme. use the name of the font family.
 Font="SpaceMono Nerd Font"
